Bump dependencies, drop log4j dependency. Refactor for new JNA interface. Drop lots of redundant final keywords for static methods. Other lint fixes.